# task-manager-fastapi

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml  sdasfkas.txt
.github/workflows/: pipeline.yaml
fast_tasks/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_tasks/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 3d1434e81558_create_users_table.py  841524660648_updated_todos_table.py  9eada5cb5091_create_todos_table.py  b50eb21c48c5_e2_a4.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
